--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
         <!-- sección home -->
         <section class="container" id="home">
             <h1>BOOKSJG, los mejores títulos literarios</h1>
-            
+            <a href="https://wa.me/3148313111" target="_blank" rel="noopener noreferrer" class="btn btn-danger">Compra tu libro</a>
+            <p>
+                Promociones de Halloween en todos los titulos de terror
+            </p>
+
         </section>
         </div>
     
