--- a/index.html
+++ b/index.html
@@ -60,7 +60,46 @@
             </p>
 
         </section>
-        </div>
+    </div>
+        <!-- seccion novedades -->
+        <section class="container" id="novedades">
+            <h2>Novedades</h2>
+            <!-- primera novedad -->
+            <div class="box">
+                <!-- imagen novedad -->
+                <img src="images/ux-ui.png" alt="ux-ui" title="Experiencia de usuario UX/UI">
+                <!-- titulo de la novedad -->
+                <h3>UX/UI</h3>
+                <!-- descripción de la novedad -->
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident velit eos sapiente. Consectetur nemo temporibus, qui possimus laborum assumenda reprehenderit cum architecto ipsum, nobis eos et suscipit excepturi saepe. Veniam!
+                </p>
+            </div>
+
+            <!-- Segunda novedad -->
+            <div class="box">
+                <!-- imagen novedad -->
+                <img src="images/web-design.png" alt="web desing" title="web design">
+                <!-- titulo de la novedad -->
+                <h3>web desing</h3>
+                <!-- descripción de la novedad -->
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident velit eos sapiente. Consectetur nemo temporibus, qui possimus laborum assumenda reprehenderit cum architecto ipsum, nobis eos et suscipit excepturi saepe. Veniam!
+                </p>
+            </div>
+
+             <!-- Tercera novedad -->
+             <div class="box">
+                <!-- imagen novedad -->
+                <img src="images/web-development.png" alt="web development" title="web development">
+                <!-- titulo de la novedad -->
+                <h3>web desing</h3>
+                <!-- descripción de la novedad -->
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident velit eos sapiente. Consectetur nemo temporibus, qui possimus laborum assumenda reprehenderit cum architecto ipsum, nobis eos et suscipit excepturi saepe. Veniam!
+                </p>
+            </div>
+        </section>
     
 
 
