--- a/index.html
+++ b/index.html
@@ -101,8 +101,105 @@
             </div>
         </section>
     
+        <!-- seccion categoria -->
+        <section class="container" id="categoria">
+            <h2>Categoría</h2>
+            <div class="box"> 
+                <img src="images/categorias/book1.jpg" alt="libro">
+                <h3>Literatura Colombiana</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ab quaerat tempore consectetur labore aliquam, quia magnam sit cum earum qui. Veritatis libero similique exercitationem quasi qui vel, minima animi?
+                </p>
+
+            </div>
+
+            <div class="box"> 
+                <img src="images/categorias/book3.jpg" alt="libro">
+                <h3>Literatura Colombiana</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ab quaerat tempore consectetur labore aliquam, quia magnam sit cum earum qui. Veritatis libero similique exercitationem quasi qui vel, minima animi?
+                </p>
+
+            </div>
+
+            <div class="box"> 
+                <img src="images/categorias/book4.jpg" alt="libro">
+                <h3>Literatura Colombiana</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ab quaerat tempore consectetur labore aliquam, quia magnam sit cum earum qui. Veritatis libero similique exercitationem quasi qui vel, minima animi?
+                </p>
+
+            </div>
+
+            <div class="box"> 
+                <img src="images/categorias/book1.jpg" alt="libro">
+                <h3>Literatura Colombiana</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ab quaerat tempore consectetur labore aliquam, quia magnam sit cum earum qui. Veritatis libero similique exercitationem quasi qui vel, minima animi?
+                </p>
+
+            </div>
+
+            <div class="box"> 
+                <img src="images/categorias/book1.jpg" alt="libro">
+                <h3>Literatura Colombiana</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ab quaerat tempore consectetur labore aliquam, quia magnam sit cum earum qui. Veritatis libero similique exercitationem quasi qui vel, minima animi?
+                </p>
+
+            </div>
+
+            <div class="box"> 
+                <img src="images/categorias/book1.jpg" alt="libro">
+                <h3>Literatura Colombiana</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ab quaerat tempore consectetur labore aliquam, quia magnam sit cum earum qui. Veritatis libero similique exercitationem quasi qui vel, minima animi?
+                </p>
+
+            </div>
+        </section>
+
+        <!-- sección contacto -->
+        <section id="contacto">
+            <h2>Contacto</h2>
+            <form action="mailto:yesseniarojas17@gmail.com" method="post">
+                <div>
+                    <input type="text" placeholder="Escribe tu nombre" required>
+                </div>
+
+                <div>
+                    <input type="text" placeholder="Escribe tu apellido" required>
+                </div>
+
+                <div>
+                    <input type="text" placeholder="Escribe tu asunto" required>
+                </div>
+
+                <div>
+                    <input type="email" placeholder="Escribe tu email" required>
+                </div>
+
+                <div>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                </div>
+
+                <div>
+                    <input type="submit" value="Enviar" class="btn btn-warning">
+                    <input type="reset" value="Borrar" class="btn btn-danger">
+                </div>
+            </form>
+
+        </section>
+
+        <!-- mapa -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63464.038897469705!2d-75.59422472089847!3d6.1972467000000195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e46829a64dabef5%3A0xec9bef74166df171!2sLibrer%C3%ADa%20Nacional!5e0!3m2!1ses-419!2sco!4v1668045418962!5m2!1ses-419!2sco" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
+
+    <!--footer o pie de pág-->
+    <footer class="cover">
+        &copy;2022. BOOKSJG Todos los derecho reservados. Diseño: Yessenia Rojas
+    </footer>
 
 
 
