--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <header>
             <div class="container">
                 <!-- Logo con enlace  -->
-                <a href="index.html"><img src="images/logo.svg" alt="logo de libreria booksjg"></a>
+                <a href="index.html"><img src="images/logo.png" alt="logo de libreria booksjg"></a>
                 <!-- menu de navegacion -->
                 <nav>
                     <!-- enlaces con ancla de nombre class= "btn btn-warning" es del boostrap-->
